[gd_scene load_steps=4 format=3 uid="uid://cl4ahrgpf8fiu"]

[ext_resource type="Script" uid="uid://bi274jmw7dpnb" path="res://src/ui/TitleScreen.gd" id="1_lficp"]
[ext_resource type="AudioStream" uid="uid://bojq1e2ki1tbi" path="res://assets/music/Yuyu_Intro_Orchestrated.mp3" id="2_v2wgv"]

[sub_resource type="LabelSettings" id="LabelSettings_riebt"]
font_size = 48

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lficp")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SELENE SUBTERFUGE IN BELLUM"
label_settings = SubResource("LabelSettings_riebt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="PressStartLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PRESS ANY KEY TO START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CONTROLS:
Arrow Keys - Move
Z or Enter - Interact
C - Resurrection Butterfly (when available)
X - Fan Attack (when available)"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v2wgv")
autoplay = true

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
